--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 </head>
 <body>
     <div class="container">
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link">Roda da Tattoo</a>
+            <span class="nav-separator">|</span>
+            <a href="cartink.html" class="nav-link">Roleta Cartink</a>
+        </nav>
+        
         <div class="game-title">
             <h1>RODA DA TATTOO</h1>
         </div>
